# ECG-Anomaly-Detection-with-Deep-Learning

./: config.py  download_data.py  main.py  pyproject.toml  requirements.txt
models/saved/: ae_threshold.npy  autoencoder_best.pt  autoencoder_last.pt  classifier_best.pt  classifier_last.pt
notebooks/: exploration.ipynb
results/metrics/: autoencoder_history.json  autoencoder_metrics.json  classifier_history.json  classifier_metrics.json
src/: dataset.py  evaluate.py  preprocessing.py  train_autoencoder.py  train_classifier.py
src/models/: autoencoder.py  classifier.py
